# atari800-spinalhdl

./: .gitignore  .gitmodules  Makefile  README.md  build.sbt  ch376-to-pmod  jop-atari.json
atari/: AtariApp.jop
boards/AC608/: fit_check.qpf  fit_check.qsf  fit_check.sdc
boards/atari-800-rp2040-qmtech-10cl025/: pin-mapping.md  pins.tcl
boards/atari800-lg-v1/: .gitignore  Makefile  atari800-lg-v1-board.md  atari800_lg_v1.qsf  atari800_lg_v1.sdc  atari800_lg_v1.sv  atari800_lg_v1_bram.qpf  atari800_lg_v1_bram.qsf  ch376_test.qsf  ch376_test.sdc  ch376_test_top.sv  vga_test.qsf  vga_test_top.sv
boards/atari800-lg-v1.1/: Netlist_ATARI-800-QMTechCB-LG-V1_1_2026-04-28.enet  README.md  pin-mapping.md
boards/ep4cgx150/: .gitignore  Makefile  atari_ep4cgx150.qsf  atari_ep4cgx150.sdc  atari_ep4cgx150_dualpll.qpf  atari_ep4cgx150_dualpll.qsf  atari_ep4cgx150_jop.qsf  (+7 more)
ecp5/: Makefile
i9/: Makefile  pll_ecp5.sv
quartus/: PllAtari800.sv  fit_check.qsf  fit_check_top.sv
tools/: atari_keyboard.py  atari_peek.py  atari_peek_raw.py  ch376_keyboard.py  ch376_sdcard_test.py  ch376_spi_test.py  ch376s_test.py  ch376s_uart_test.py
tools/pico_kbd_test/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
unused_scala/: AddressDecoderPbi.scala  AnticDelay.scala  Cpu6510.scala  DvidOut.scala  FifoReceive.scala  FifoTransmit.scala  HqDac.scala  I2cMaster.scala  I2cRegs.scala  I2sTx.scala  MultInfer.scala  Pbi6502.scala  Ps2ToAtari5200.scala  Rgb2Ypbpr.scala  SpiMaster.scala  SvideoGtia.scala  Timing6502.scala  Wm8960Init.scala
vivado/: pll_xilinx.sv  synth_check.tcl
(+247 files in other folders)
